--- a/React-app/package.json
+++ b/React-app/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^5.16.1",
     "@mui/material": "^5.16.1",
     "axios": "^1.7.3",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
