--- a/1st Project/shop/package.json
+++ b/1st Project/shop/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.0.1",
     "@mui/material": "^6.0.1",
     "axios": "^1.7.7",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.4.6",
     "prop-type": "^0.0.1",
     "react": "^18.3.1",
