--- a/1st Project/Dashboard/package.json
+++ b/1st Project/Dashboard/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5174",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -16,10 +16,12 @@
     "@mui/material": "^6.1.6",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
