--- a/2nd_Project/IQRA/package.json
+++ b/2nd_Project/IQRA/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.2.0",
     "@mui/material": "^6.2.0",
     "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
