--- a/2nd_Project/IQRA/package.json
+++ b/2nd_Project/IQRA/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.0",
     "@mui/material": "^6.2.0",
+    "axios": "^1.7.9",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "formik": "^2.4.6",
