--- a/DMP/Backend/.env
+++ b/DMP/Backend/.env
@@ -1,3 +1,3 @@
-MONGO_URL = mongodb://localhost:27017
+MONGO_URL = mongodb://localhost:27017/dmp
 PORT = 8000
 JWT_SECRET = EJRBVJIAERGCNWECFMERUIGHERJKABVDFJBVKJSDBVJ
